# cmake-header-only-library-template

./: CMakeLists.txt  README.adoc
cmake/modules/: AddSanitizerBuildTypeFlags.cmake  SetBuildTypes.cmake
include/my_project/: my_project.hpp
src/: CMakeLists.txt  version.hpp.in
